[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "texturize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "scipy>=1.14.1",
]
[project.scripts]
texturize = "main:cli"
